--- a/graphs/assets/css/generic.css
+++ b/graphs/assets/css/generic.css
@@ -257,10 +257,10 @@ samp {
  * 2. Correct font properties not being inherited.
  * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
  */
+/* select, */
 button,
 input,
 optgroup,
-select,
 textarea {
     color: inherit; /* 1 */
     font: inherit; /* 2 */
@@ -280,8 +280,8 @@ button {
  * Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
  * Correct `select` style inheritance in Firefox.
  */
-button,
-select {
+/* select, */
+button {
     text-transform: none;
 }
 
