--- a/graphs/assets/css/series.css
+++ b/graphs/assets/css/series.css
@@ -11,16 +11,17 @@ body {
 /* Select DIV */
 .selection {
     position: page;
+    border: 0;
 }
 
 /* Styling the arrow inside the select element. */
 .selection:after {
     content: "";
-    right: 15px;
-    top: 3px;
+    right: 18px;
+    top: 1px;
     width: 0;
     height: 0;
-    border: 5px solid;
+    border: 6px solid;
     border-color: black transparent transparent transparent;
     position: relative;
     pointer-events: none;
@@ -35,12 +36,12 @@ select::-ms-expand {
 .selection select {
     -webkit-appearance: none;
     -moz-appearance: none;
-    height: 35px;
-    width: 210px;
-    margin: 3px 0;
-    padding: 0 3px;
+    height: 45px;
+    width: 180px;
+    margin: 5px 0;
+    padding: 0 5px;
     font-family: Gafata, Roboto, serif;
     border: 0 solid;
     border-radius: 5px;
-    background-color: rgba(182, 173, 255, 0.18);
+    background-color: rgba(182, 173, 255, 0.0);
 }
