--- a/graphs/assets/css/menu.css
+++ b/graphs/assets/css/menu.css
@@ -5,7 +5,7 @@
 
 /* Body */
 body {
-    font-family: Gafata, Roboto, serif;
+    font-family: Vollkorn, Roboto, serif;
 }
 
 /* Select DIV */
@@ -17,12 +17,13 @@ body {
 /* Styling the arrow inside the select element. */
 .selection:after {
     content: "";
-    right: 18px;
-    top: 1px;
+    right: 15px;
+    top: 0.1px;
     width: 0;
     height: 0;
-    border: 6px solid;
-    border-color: black transparent transparent transparent;
+    border: 8px solid;
+    border-radius: 5px;
+    border-color: black black black black;
     position: relative;
     pointer-events: none;
 }
@@ -36,12 +37,12 @@ select::-ms-expand {
 .selection select {
     -webkit-appearance: none;
     -moz-appearance: none;
-    height: 45px;
+    height: 40px;
     width: 180px;
     margin: 5px 0;
     padding: 0 5px;
-    font-family: Gafata, Roboto, serif;
+    font-family: Vollkorn, Roboto, serif;
     border: 0 solid;
     border-radius: 5px;
-    background-color: rgba(182, 173, 255, 0.0);
+    background-color: rgba(182, 173, 255, 0.05);
 }
